Fix height for page layout to make bgr color stretch

--- a/src/business/PageLayout/PageLayout.pcss
+++ b/src/business/PageLayout/PageLayout.pcss
@@ -6,13 +6,13 @@
   background-color: var(--white);
 
   &--fixed-footer {
-    height: 100%;
+    min-height: 100%;
   }
 }
 
 .telia-page-layout__header {
   padding: 3rem 0;
-  margin: 0 auto;
+  margin: 3rem auto 0 auto;
   width: 640px;
 }
 
